# isdin_ds_challenge

./: .gitignore  isdin_challenge.ipynb  pyproject.toml
isdin/: etl_data.py  read_data.py  train.py
