[tool.poetry]
name = "isdin"
version = "0.1.0"
description = "ISDIN challenge project dependencies"
authors = ["Jose Fonceca <ilbertofjunior@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
matplotlib = "^3.7.1"
jupyter = "^1.0.0"
xgboost = "^1.7.5"
dython = "^0.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
