[tool.poetry]
name = "isdin"
version = "0.1.0"
description = "ISDIN challenge project dependencies"
authors = ["Jose Fonceca <ilbertofjunior@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
matplotlib = "^3.7.1"
jupyter = "^1.0.0"
xgboost = "^1.7.5"
dython = "^0.7.4"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
black = "^23.3.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.mypy]
follow_imports_silent = true
show_column_numbers = true
strict = true
